--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -1,86 +1,61 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "#**List is a collection of inhetrogenous data types.**\n",
-        "List is mutable, So slicing and indexing can be used in list.\n"
-      ],
       "metadata": {
         "id": "kneQPXoVHofG"
-      }
-    },
-    {
-      "cell_type": "markdown",
+      },
       "source": [
-        "List are written within square brackets [ ].\n",
+        "# **List is a collection of Inhetrogenous data types.**\n",
         "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "CU9Z4KICGetN"
-      }
+        "### List is mutable, So slicing and indexing can be used in list.\n",
+        "\n",
+        "### List are written within square brackets [ ]."
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1ueV5id-AMWD"
+      },
       "source": [
         "#   **Methods Of Lists.**\n",
         "\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "1ueV5id-AMWD"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List = [10,20,10.5,\"hello\",True]\n",
-        "List"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "bmBr2igkJG6U",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "bmBr2igkJG6U",
         "outputId": "d7953e9e-84a7-4958-ebce-7222a964d7d1"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[10, 20, 10.5, 'hello', True]"
             ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List = [10,20,10.5,\"hello\",True]\n",
+        "List"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List.append(30) # .append(elem) is used to add the values in the list. It will add the values from the last index.\n",
-        "List"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,26 +63,26 @@
         "id": "VjRzDUZr5AAy",
         "outputId": "7deab8b6-5eb2-473e-da98-bfe53196c037"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[10, 20, 10.5, 'hello', True, 30]"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List.append(30) # .append(elem) is used to add the values in the list. It will add the values from the last index.\n",
+        "List"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List.remove(\"hello\") # .remove(elem) is used remove the values from the list. It will remove the values from the last index.\n",
-        "List"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -115,26 +90,26 @@
         "id": "zuV8UazO5Uz5",
         "outputId": "1b72317f-718d-469c-f6a8-ff6ba19b8d9e"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[10, 20, 10.5, True, 30]"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List.remove(\"hello\") # .remove(elem) is used remove the values from the list. It will remove the values from the last index.\n",
+        "List"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List.insert(3,\"Hello\") # .insert(index, elem) is also used to add the values in the list just like append but, insert is used to insert the values at certain index.\n",
-        "List"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,26 +117,26 @@
         "id": "W8YH_o2v6pUm",
         "outputId": "c258bf15-2736-4be7-f95e-9fd1249dad6b"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[10, 20, 10.5, 'Hello', True, 30]"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List.insert(3,\"Hello\") # .insert(index, elem) is also used to add the values in the list just like append but, insert is used to insert the values at certain index.\n",
+        "List"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List.pop(1) # .pop(index) is used to remove values at certain index.\n",
-        "List"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -169,26 +144,26 @@
         "id": "ukbkrnxj8ILK",
         "outputId": "a475df83-cea5-4050-ce7c-32077da6be0e"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[10, 10.5, 'Hello', True, 30]"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List.pop(1) # .pop(index) is used to remove values at certain index.\n",
+        "List"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List2 = [\"World\",True,445,33.9]\n",
-        "List2"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,26 +171,26 @@
         "id": "EIcJvbvU8T3I",
         "outputId": "746c5524-cb94-4ed8-95a9-9aa726584d37"
       },
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['World', True, 445, 33.9]"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List2 = [\"World\",True,445,33.9]\n",
+        "List2"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List.extend(List2) # .extend(list2) is used to merge two lists in one.\n",
-        "List"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -223,26 +198,26 @@
         "id": "syfcoroy9MpB",
         "outputId": "3c435cae-1ed8-4256-ff3f-fb2938fb5360"
       },
-      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[10, 10.5, 'Hello', True, 30, 'World', True, 445, 33.9]"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 31
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List.extend(List2) # .extend(list2) is used to merge two lists in one.\n",
+        "List"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "List2.clear # .clear is used to remove all the elements from the list\n",
-        "List2"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -250,27 +225,26 @@
         "id": "PlF1pOjj9gfP",
         "outputId": "ae3b25c2-1fc6-43de-f2ec-86d079a51ad6"
       },
-      "execution_count": 34,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[]"
+              "['World', True, 445, 33.9]"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 34
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "List2.clear # .clear is used to remove all the elements from the list\n",
+        "List2"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Alphabets = [\"f\",\"i\",\"m\",\"a\",\"v\",\"n\",\"b\",\"c\",\"g\"] # .sort() is used arrange the elements in Ascending order. It can be Number, Alphabetical or string etc.\n",
-        "Alphabets.sort()\n",
-        "Alphabets"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -278,27 +252,27 @@
         "id": "Tt9hNRUJK6OA",
         "outputId": "8a88f422-1bc6-43ac-c9a2-117ff13b8224"
       },
-      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['a', 'b', 'c', 'f', 'g', 'i', 'm', 'n', 'v']"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 39
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Alphabets = [\"f\",\"i\",\"m\",\"a\",\"v\",\"n\",\"b\",\"c\",\"g\"] # .sort() is used arrange the elements in Ascending order. It can be Number, Alphabetical or string etc.\n",
+        "Alphabets.sort()\n",
+        "Alphabets"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Alphabets_rev = [\"f\",\"i\",\"m\",\"a\",\"v\",\"n\",\"b\",\"c\",\"g\"] # .reverse() is used to reverse the elements according to descending order.\n",
-        "Alphabets_rev.reverse()\n",
-        "Alphabets_rev"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -306,26 +280,27 @@
         "id": "OHbRy5sCLI2P",
         "outputId": "c73d9c1f-a28b-4887-a9f6-1550ce6344cf"
       },
-      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['g', 'c', 'b', 'n', 'v', 'a', 'm', 'i', 'f']"
             ]
           },
+          "execution_count": 10,
           "metadata": {},
-          "execution_count": 40
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Alphabets_rev = [\"f\",\"i\",\"m\",\"a\",\"v\",\"n\",\"b\",\"c\",\"g\"] # .reverse() is used to reverse the elements according to descending order.\n",
+        "Alphabets_rev.reverse()\n",
+        "Alphabets_rev"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Repeat = [10,20,30,[1,2,3],30,40,50] # .count(elem) is used to find out the values which are repeated in the list.\n",
-        "Repeat.count(30)"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -333,26 +308,26 @@
         "id": "Ov510puONiAD",
         "outputId": "28302318-21cf-4f90-e2e6-1683695b37a1"
       },
-      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 41
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Repeat = [10,20,30,[1,2,3],30,40,50] # .count(elem) is used to find out the values which are repeated in the list.\n",
+        "Repeat.count(30)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "New = [10, \"my\", 10.5 ,\"name\", True] # .copy() is used to return a shallow copy of the list.\n",
-        "New.copy()"
-      ],
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -360,19 +335,106 @@
         "id": "-Bw6wc9VORan",
         "outputId": "b7a35a94-3057-4f1b-a9a2-6bd107446e18"
       },
-      "execution_count": 42,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[10, 'my', 10.5, 'name', True]"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 42
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "New = [10, \"my\", 10.5 ,\"name\", True] # .copy() is used to return a shallow copy of the list.\n",
+        "New.copy()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# FOR and IN \n",
+        "\n",
+        "### For and In are the constructor used to look at each element in the list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "150"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Number = [10,20,30,40,50] \n",
+        "sum = 0\n",
+        "for i in Number:\n",
+        "    sum = sum + i\n",
+        "sum"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# IF and IN \n",
+        "\n",
+        "### It is used to test if the values is in the collection of list. Returning, true or false."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Yes, it is present in the list\n"
+          ]
+        }
+      ],
+      "source": [
+        "Message = [\"hello\",\"hi\",\"welcome\"]\n",
+        "if \"hello\" in Message:\n",
+        "    print(\"Yes, it is present in the list\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
