--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -10,7 +10,9 @@
         "\n",
         "### List is mutable, So slicing and indexing can be used in list.\n",
         "\n",
-        "### List are written within square brackets [ ]."
+        "### List are written within square brackets [ ].\n",
+        "\n",
+        "### List is a ordered collection."
       ]
     },
     {
@@ -363,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -372,7 +374,7 @@
               "150"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -382,7 +384,7 @@
         "sum = 0\n",
         "for i in Number:\n",
         "    sum = sum + i\n",
-        "sum"
+        "sum "
       ]
     },
     {
@@ -396,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
