--- a/Tuples.ipynb
+++ b/Tuples.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VE22h31kbUiY"
+      },
       "source": [
         "#  **Tuples is a collection of Inhetrogenous data types.**\n",
         "\n",
@@ -24,26 +13,20 @@
         "## Tuples is written in round brackets ().\n",
         "\n",
         "## Tuples is a ordered collection."
-      ],
-      "metadata": {
-        "id": "VE22h31kbUiY"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Methods Of Tuples.**"
-      ],
       "metadata": {
         "id": "BlydPAeWfyAm"
-      }
+      },
+      "source": [
+        "# **Methods Of Tuples.**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Tuple = (10,20,True,\"hello\",11.5,20)\n",
-        "Tuple"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,25 +34,26 @@
         "id": "YQkC_OHvf477",
         "outputId": "007f9c34-4c1e-4d40-cfed-298b1658375c"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(10, 20, True, 'hello', 11.5, 20)"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Tuple = (10,20,True,\"hello\",11.5,20)\n",
+        "Tuple"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Tuple.count(20) # .count(elem) is used to count the values which are repeated in the tuple."
-      ],
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,25 +61,25 @@
         "id": "GjijKFoXgSiF",
         "outputId": "1f8b7a80-ba82-4dea-cd95-07780fe202ea"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Tuple.count(20) # .count(elem) is used to count the values which are repeated in the tuple."
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Tuple.count(\"hello\")"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -103,25 +87,25 @@
         "id": "YwmnS5Klhsuh",
         "outputId": "41930c0b-7801-4581-973e-15186cc5a8e2"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1"
             ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Tuple.count(\"hello\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Tuple.count(True)"
-      ],
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -129,26 +113,25 @@
         "id": "TlhBAfoSiEi3",
         "outputId": "936270b6-09e5-4dc7-e74a-b34f2c875bd8"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Tuple.count(True)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Tuple_1 = (\"hello\",\"Python\",True,10,10.5)\n",
-        "Tuple_1"
-      ],
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,25 +139,26 @@
         "id": "kR1yja52iJL_",
         "outputId": "ea1b3ceb-84b8-4895-b379-c5937be4340d"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "('hello', 'Python', True, 10, 10.5)"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Tuple_1 = (\"hello\",\"Python\",True,10,10.5)\n",
+        "Tuple_1"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Tuple_1.index(\"Python\") # .index(elem) is used to return that which element is present on which index."
-      ],
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -182,25 +166,25 @@
         "id": "MAKX1XwmimWF",
         "outputId": "cc044749-0e0f-49e7-8145-2ee0b2b771ff"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Tuple_1.index(\"Python\") # .index(elem) is used to return that which element is present on which index."
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Tuple_1.index(10.5)"
-      ],
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -208,19 +192,112 @@
         "id": "HJiaBifAisc3",
         "outputId": "96fccabb-3682-467f-f4b6-506ad4f36ebc"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "4"
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Tuple_1.index(10.5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Slicing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(10, 20, 30, 'Hello', True, 5.5)"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Tup_1 = (10,20,30,\"Hello\",True,5.5)\n",
+        "Tup_1[0:]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(30, 'Hello', True, 5.5)"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Tup_1[2:]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(10, 30, True)"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Tup_1[0::2]"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
